--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 [
   {
-    "name" : "Terizla Backup",
-    "link" : "",
-    "image" : "",
-    "filename" : ".zip"
+    "name" : "Terizla Elite",
+    "link" : "https://github.com/pinyapple1029/terizlafiles/raw/master/Terizla_Elite.zip",
+    "image" : "https://github.com/pinyapple1029/terizlafiles/raw/master/terizla_elite.jpg",
+    "filename" : "Terizla_Elite.zip"
   }
   ]
